--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -43,8 +44,11 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.1",
+    "@commitlint/config-conventional": "^17.0.0",
     "@types/gtag.js": "0.0.10",
     "autoprefixer": "^10.4.2",
+    "husky": "^8.0.1",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23"
   }
