--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swiftwords",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@sentry/react": "^6.19.7",
@@ -23,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "release": "standard-version --skip.changelog"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +51,7 @@
     "autoprefixer": "^10.4.2",
     "husky": "^8.0.1",
     "postcss": "^8.4.6",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.0.23"
   }
 }
